Add vehicles swagger docs
